# project-icon-maker

./: main.py  pyproject.toml
